# esp8266-network-clock

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO_V1.1.license  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.license
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: reuse.yml
.reuse/: dep5
components/display/: CMakeLists.txt  segment.cpp  tm1637.cpp
components/display/include/display/: segment.hpp  tm1637.hpp
components/timekeeping/: CMakeLists.txt  clock.cpp  ntp.cpp
components/timekeeping/include/timekeeping/: clock.hpp  ntp.hpp
large-7-segment-clock/: fp-lib-table  large-7-segment-clock.kicad_pro  large-7-segment-clock.kicad_sch  project_symbols.kicad_sym  sym-lib-table  template.kicad_wks
large-7-segment-clock/project_footprints.pretty/: ESP-01S.kicad_mod
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.license  main.cpp  wifi_init.cpp  wifi_init.hpp
